versioned_docs/version-3.10.0/use-cases/auto-merge/index.mdx
---
title: "Auto-merge"
id: "auto-merge"
---

import CodeBlock from "@theme/CodeBlock";
import Example1 from "!!raw-loader!./example1.yml";
import Example2 from "!!raw-loader!./example2.yml";
import Example3 from "!!raw-loader!./example3.yml";

:::warning Requires GitHub token

Please note that this function requires the [Reviewpad Action to be installed with a GitHub token](/getting-started/installation-action-tokenized)
:::

The ability to configure automatic pull requests merges can greatly unblock developers that typically wait for hours, or even days, to receive a LGTM review.

Since not every pull request needs the same review process, using the semantic features of Reviewpad, you can configure many scenarios where auto-merge seems natural.

Out of the box, Reviewpad supports a [merge action](/guides/built-ins#merge) which can be used in multiple scenarios.

## Auto-merge based on file properties

<CodeBlock language="yml">{Example1}</CodeBlock>

## Auto-merge small pull requests

<CodeBlock language="yml">{Example2}</CodeBlock>

## Auto-merge non-critical pull requests

The [**hasAnnotation**](/guides/built-ins#hasannotation) built-in can be used to configure powerful auto-merges. See a more in-depth example of the usage of [**hasAnnotation**](/guides/built-ins#hasannotation) in the [automated labelling section](/use-cases/label-critical-changes-with-semantic-code-annotations).

<CodeBlock language="yml">{Example3}</CodeBlock>
